--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>World Travel Photography</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="JS/lightGallery/lightgallery.min.css">
+  <link rel="stylesheet" href="JS/lightbox/css/lightbox.css">
   <link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
   <link rel="stylesheet" href="CSS/styles.css">
 </head>
@@ -23,12 +23,12 @@
     <div class="images-containter">
       <div class="img-1">
         <img src='photos/thumbnails/01.jpg'>
-        <a href="photos/01.jpg gallery"></a>
+        <a href="photos/01.jpg" data-lightbox="roadtrip"></a>
       </div>
 
       <div class="img-2">
         <img src='photos/thumbnails/02.jpg'>
-        <a href="photos/02.jpg gallery"></a>
+        <a href="photos/02.jpg" data-lightbox="roadtrip"></a>
       </div>
 
       <div class="img-3">
@@ -87,9 +87,7 @@
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
-  <script src="JS/lightGallery/lightgallery.min.js"></script>
-  <script src="JS/lightGallery/lg-thumbnail.min.js"></script>
-  <script src="JS/lightGallery/lg-fullscreen.min.js"></script>
+  <script src="JS/lightbox/js/lightbox.js"></script>
   <script src="JS/main.js"></script>
 </body>
 </html>
