--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
   <div class="main-wrapper">
 
     <h1>World Travel Photography</h1>
+    <div class='sub'>
+      <span class="secondary">Site: Jacki Bolt</span><span>Photos: Anonymous Treehouse Photographer</span>
+    </div>
         <!-- Search Bar -->
     <div class="search">
+      <input type="text" id="search" name="search" placeholder="search for images here">
 
+      </form>
     </div>
 
         <!-- Images Grid -->
