more search bar

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div>
         <!-- Search Bar -->
     <div class="search">
-      <!-- <input type="text" id="search" name="search" placeholder="type your search here"> -->
-      <input id="search_input" name="search" placeholder="type your search here" type="text" data-list=".list">
+      <input type="text" id="search_input" name="search" placeholder="type your search here">
+      <!-- <input id="search_input" name="search" placeholder="type your search here" type="text" data-list=".list"> -->
       <!-- <button type="button" id="search-button" name="search-button">Search</button> -->
       </form>
     </div>
@@ -107,7 +107,7 @@
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
   <script src="JS/lightbox/js/lightbox.js"></script>
-  <script type="text/javascript" src="JS/hideseek/jquery.hideseek.min.js"></script>
+  <!-- <script type="text/javascript" src="JS/hideseek/jquery.hideseek.min.js"></script> -->
   <script src="JS/main.js"></script>
 </body>
 </html>
