--- a/index.html
+++ b/index.html
@@ -20,14 +20,11 @@
         <!-- Search Bar -->
     <div class="search">
       <input type="text" id="search_input" name="search" placeholder="type your search here">
-      <!-- <input id="search_input" name="search" placeholder="type your search here" type="text" data-list=".list"> -->
-      <!-- <button type="button" id="search-button" name="search-button">Search</button> -->
-      </form>
     </div>
 
         <!-- Images Grid -->
     <div class="images-containter list">
-      <!-- <p id="no-results" style=display:none;>No results</p> -->
+
       <div class="img-1">
         <a href="photos/01.jpg" class="image" data-lightbox="gallery" data-title="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
           <img src='photos/thumbnails/01.jpg' alt="Hay Bales">
@@ -90,13 +87,13 @@
 
       <div class="img-11">
         <a href="photos/11.jpg" class="image" data-lightbox="gallery" data-title="I did a tour of a cave today and the view of the landscape below was breathtaking.">
-          <img src='photos/thumbnails/11.jpg'>
+          <img src='photos/thumbnails/11.jpg' alt="Cave">
         </a>
       </div>
 
       <div class="img-12">
         <a href="photos/12.jpg" class="image" data-lightbox="gallery" data-title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
-          <img src='photos/thumbnails/12.jpg'>
+          <img src='photos/thumbnails/12.jpg' alt="Bluebells">
         </a>
       </div>
 
